<resources>
    <string name="app_name">Pak Tukang</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_sign_up_disini">Belum punya akun? Daftar disini</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="sign_up">Daftar</string>
    <string name="login_error_message">Field yang kosong harus diisi</string>
    <string name="login_error_tittle">Error!</string>
    <string name="signup_error_message">Field yang kosong harus diisi</string>
    <string name="signup_error_tittle">Error!</string>
    <string name="signup_succes">Sukses! Sekarang kamu bisa login</string>
    <string name="add_item">Tamah item</string>
    <string name="action_logout">logout</string>
    <string name="salah_password">Password salah!</string>
    <string name="salah_email">Email tidak terdaftar</string>
    <string name="jaringan_error">cek jaringan anda!</string>
    <string name="pass_not_match">Password tidak sama, pada confirm password</string>
    <string name="loading">Loading..</string>

</resources>
